--- a/seminar/src/app/UI/header/header.component.html
+++ b/seminar/src/app/UI/header/header.component.html
@@ -1,4 +1,4 @@
-<nav dir="rtl" class="navbar navbar-expand-lg navbar-light bg-light">
+<nav dir="rtl" class="navbar navbar-expand-lg navbar-dark bg-dark shadow p-3 mb-5">
     <a class="navbar-brand" href="#">less mess</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
