--- a/seminar/src/styles.css
+++ b/seminar/src/styles.css
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
 @import "~bootstrap/dist/css/bootstrap.css";
 html {
-    overflow-x: hidden;
-    margin-right: calc(100% - 100vw);
-  }
+  overflow-x: hidden;
+  margin-right: calc(100% - 100vw);
+}
+
+*:focus {
+  outline: none !important
+}
