class component styling, imports

--- a/seminar/src/app/UI/header/header.component.html
+++ b/seminar/src/app/UI/header/header.component.html
@@ -11,7 +11,7 @@
                         class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/Manger" routerLinkActive="activeLink">מנהלת</a>
+                <a class="nav-link" routerLink="/manager" routerLinkActive="activeLink">מנהלת</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="/Presence" routerLinkActive="activeLink">נוכחות</a>
