--- a/seminar/src/app/object/class/class.component.html
+++ b/seminar/src/app/object/class/class.component.html
@@ -20,10 +20,10 @@
             <form>
                 <div class="card-header">
                     <h2 dir="rtl" class="text-center">כל הכיתות</h2>
-                    <label class="sr-only" for="search">חיפוש מקצוע</label>
+                    <label class="sr-only" for="search">חיפוש כיתה</label>
                     <div class="input-group mb-2">
                         <div class="input-group-append  ">
-                            <div class="input-group-text">חיפוש מקצוע</div>
+                            <div class="input-group-text">חיפוש כיתה</div>
                         </div>
                         <input [(ngModel)]="search" id="search" class="text-center form-control form-control-lg"
                             placeholder="התחילי להקליד..." name="search"><br>
