--- a/seminar/src/app/object/techer/techer.component.html
+++ b/seminar/src/app/object/techer/techer.component.html
@@ -31,7 +31,13 @@
   </div>
 
   <div class="col-sm-8">
-    <div class="card shadow-sm p-3 mb-5 bg-white rounded">
+    <div class="d-flex justify-content-center">
+      <div class="spinner-border text-primary" *ngIf="names.length == 0" role="status"
+        style="width: 10rem; height: 10rem;">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div>
+    <div class="card shadow-sm p-3 mb-5 bg-white rounded" *ngIf="names.length > 0">
       <form>
         <div class="card-header">
           <h2 dir="rtl" class="text-center">כל המורות</h2>
