--- a/seminar/src/app/show-presence/show-presence.component.html
+++ b/seminar/src/app/show-presence/show-presence.component.html
@@ -1,7 +1,7 @@
 
 <!-- <div *ngIf="f()"    [permenent]="day" >    
  
-   {{l1.Techer.Name}}
+   {{l1.Teacher.Name}}
    <br>
    {{l1.SubjectIn.Name}} 
   
@@ -9,7 +9,7 @@
 </div> -->
 
 <div  [permenent]="day" >    
-   {{day.Techer.Name}}
+   {{day.teacher.Name}}
     <br>
    {{day.SubjectIn.Name}}
   </div>
