--- a/seminar/src/app/show-presenceBySubject/show-presenceS.component.html
+++ b/seminar/src/app/show-presenceBySubject/show-presenceS.component.html
@@ -1,5 +1,5 @@
- <div *ngIf="day!=null" [permenent]="day.Techer.Permanent">    
-   {{day.Techer.Name}}
+ <div *ngIf="day!=null" [permenent]="day.teacher.Permanent">    
+   {{day.teacher.Name}}
     <br>
    {{day.Clss.Name}}
   </div>
