--- a/seminar/src/app/show-presenceByTeacher/show-presenceT.component.html
+++ b/seminar/src/app/show-presenceByTeacher/show-presenceT.component.html
@@ -1,4 +1,4 @@
- <div *ngIf="day!=null" [permenent]="day.Techer.Permanent">    
+ <div *ngIf="day!=null" [permenent]="day.teacher.Permanent">    
    {{day.Clss.Name}}
     <br>
    {{day.SubjectIn.Name}}
