--- a/seminar/src/app/object/schedule/schedule.component.html
+++ b/seminar/src/app/object/schedule/schedule.component.html
@@ -2,7 +2,7 @@
   <div class="col-sm-6">
     <div class="card shadow-sm p-3 mb-5 bg-white rounded">
       <div class="card-body">
-        <h2 class="card-title">מערכת</h2>
+        <h2 class="card-title justify-content-center d-flex">מערכת</h2>
 
         <div>
           <h4>חפש לפי:</h4>
@@ -56,12 +56,12 @@
     </div>
   </div>
   <div class="col-sm-6">
-    <!-- <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center" *ngIf="classesListFilter.length == 0 && subjectsListFilter.length == 0 && teacherListFilter.length == 0">
       <div class="spinner-border text-primary" role="status"
         style="width: 10rem; height: 10rem;">
         <span class="sr-only">Loading...</span>
       </div>
-    </div> -->
+    </div>
     <div *ngIf="isShowClasses">
       <div class="card shadow-sm p-3 mb-5 bg-white rounded" *ngFor="let c of classesListFilter">
         <b nowrap class="d-flex justify-content-center text-secondary">כיתה: {{c.Name}}</b>
