show components for rows of table

--- a/seminar/src/app/object/schedule/schedule.component.html
+++ b/seminar/src/app/object/schedule/schedule.component.html
@@ -1,11 +1,11 @@
 <div class="row text-right">
-  <div class="col-sm-6">
+  <div class="col-4">
     <div class="card shadow-sm p-3 mb-5 bg-white rounded">
       <div class="card-body">
         <h2 class="card-title justify-content-center d-flex">מערכת</h2>
 
         <div>
-          <h4>חפש לפי:</h4>
+          <h4>חיפוש לפי:</h4>
           <div class="input-group mb-3">
             <div class="input-group-append">
               <label class="input-group-text" for="chooseclass">כיתה</label>
@@ -55,7 +55,7 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-6">
+  <div class="col-8">
     <div class="d-flex justify-content-center" *ngIf="classesListFilter.length == 0 && subjectsListFilter.length == 0 && teacherListFilter.length == 0">
       <div class="spinner-border text-primary" role="status"
         style="width: 10rem; height: 10rem;">
