--- a/seminar/src/app/object/subject/subject.component.html
+++ b/seminar/src/app/object/subject/subject.component.html
@@ -1,4 +1,4 @@
-<div class="row text-right">
+<div class="row  text-right">
   <div class="col-sm">
     <div class="card shadow-sm p-3 mb-5 bg-white rounded">
       <div class="card-body">
@@ -30,13 +30,7 @@
     </div>
   </div>
   <div class="col-sm-8">
-    <div class="d-flex justify-content-center">
-      <div class="spinner-border text-primary" *ngIf="subjectList.length == 0" role="status"
-        style="width: 10rem; height: 10rem;">
-        <span class="sr-only">Loading...</span>
-      </div>
-    </div>
-    <div class="card shadow-sm p-3 mb-5 bg-white rounded" *ngIf="subjectList.length > 0">
+    <div class="card shadow-sm p-3 mb-5 bg-white rounded">
       <form>
         <div class="card-header">
           <h2 dir="rtl" class="text-center">כל המקצועות</h2>
