--- a/seminar/src/app/show/show-teacher/show-teacher.component.html
+++ b/seminar/src/app/show/show-teacher/show-teacher.component.html
@@ -1,5 +1,5 @@
 <!-- <div class="card"> -->
-  <div class="card-text">
+  <div class="card-text" dir="rtl" style="text-align: right;">
     <span><strong>תעודת זהות:</strong> {{showTeacher.CodeTeacher}}</span>
     <div><strong>שם: </strong>{{showTeacher.Name}}</div>
     <div *ngIf="showTeacher.Permanent==true"><strong>שעות: </strong> {{showTeacher.Hour_teken_month}}</div>
