added logo and icon to site

--- a/seminar/src/app/UI/header/header.component.html
+++ b/seminar/src/app/UI/header/header.component.html
@@ -1,5 +1,5 @@
-<nav dir="rtl" class="navbar navbar-expand-lg navbar-dark bg-dark shadow p-3 mb-5">
-    <a class="navbar-brand" href="#">less mess</a>
+<nav dir="rtl" class="navbar navbar-expand-lg navbar-light bg-light shadow mb-5">
+    <img  style="padding: 0;height: 50px" src="../../../assets//img/logo.png">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
