--- a/seminar/src/app/UI/footer/footer.component.css
+++ b/seminar/src/app/UI/footer/footer.component.css
@@ -12,8 +12,10 @@
 #footer {
   width: 100%;
   height: 50px;
-  background-color: #636363;
   text-align: center;
+  -webkit-box-shadow: 0px -4px 5px 0px lightgray;
+  -moz-box-shadow: 0px -4px 5px 0px lightgray;
+  box-shadow: 0px -4px 5px 0px lightgray;
 }
 
 #footer>.container {
