--- a/seminar/src/app/UI/footer/footer.component.html
+++ b/seminar/src/app/UI/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer id="footer" class="app-footer">
     <div class="container-fluid" dir="rtl">
-      <span>המערכת נוצרה ע"י רות זלוף</span> &nbsp;<span>עיצוב ע"י בת שבע ריץ</span>
+      <span>כל הזכויות שמורות 2020</span>
     </div>
   </footer>
