schedule remove extra words

--- a/seminar/src/app/object/schedule/schedule.component.html
+++ b/seminar/src/app/object/schedule/schedule.component.html
@@ -36,15 +36,15 @@
           <!-- <button class="btn btn-primary" (click)="search()">סינון</button>&nbsp; -->
           <div class="btn-group btn-group-toggle" dir="ltr" data-toggle="buttons">
             <label class="btn btn-secondary">
-              <input type="radio" name="options" id="classes" autocomplete="off" (click)="showByClasses()"> סינון לפי
+              <input type="radio" name="options" id="classes" autocomplete="off" (click)="showByClasses()"> 
               כיתות
             </label>
             <label class="btn btn-secondary">
-              <input type="radio" name="options" id="teachers" autocomplete="off" (click)="showByTeachers()"> סינון לפי
+              <input type="radio" name="options" id="teachers" autocomplete="off" (click)="showByTeachers()"> 
               מורות
             </label>
             <label class="btn btn-secondary">
-              <input type="radio" name="options" id="subjects" autocomplete="off" (click)="showBySubjects()"> סינון לפי
+              <input type="radio" name="options" id="subjects" autocomplete="off" (click)="showBySubjects()"> 
               מקצועות
             </label>
             <label class="btn btn-primary">
