--- a/seminar/src/app/object/Manager/Manager.component.html
+++ b/seminar/src/app/object/Manager/Manager.component.html
@@ -1,4 +1,4 @@
-<form dir="rtl">
+<form dir="rtl" style="text-align: center;">
     <br>
     <div class="form-group" dir="rtl">
         <div class="custom-file">
