--- a/seminar/src/app/UI/header/header.component.html
+++ b/seminar/src/app/UI/header/header.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" routerLink="/Home" routerLinkActive="activeLink">Home <span
+                <a class="nav-link" routerLink="/Home" routerLinkActive="activeLink">בית <span
                         class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
